# event-dispatcher

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: poetry-publish.yml
event_dispatcher/: __init__.py  _dispatcher.py  async_dispatcher.py  dispatcher.py  sync_dispatcher.py  types.py
examples/: dispatch_with_async_dispatcher.py  dispatch_with_dataclass.py  unsubscribe_callback_for_event.py  using_subscribe_as_decorator.py  using_subscribe_decorator.py
tests/: test_async_dispatcher.py  test_dispatcher.py  test_sync_dispatcher.py
